@@ -191,6 +191,7 @@ Jython in ways large and small, in no particular order:
     Thierry Guérin
     Xiaoyin Liu
     Joe Shannon
+    shoaniki (GitHub name)
 
 Local Variables:
 mode: indented-text
